--- a/index.html
+++ b/index.html
@@ -17,8 +17,12 @@
 <body>
     <!--    NAVBAR      -->
     <div class="navbar">
-        <h2 class="portfolio-title">Portfolio</h2>
-        <ul class="menu-navbar"></ul>
+        <h2>Portfolio</h2>
+        <div id="menu">
+            <div class="icon" id="burger">|||</div>
+            <div class="icon" id="cross">X</div>
+            <ul></ul>
+        </div>
     </div>
     <div id="bg-navbar"></div>
 
@@ -34,16 +38,16 @@
     </div>
 
     <!--    PROJECTS    -->
-    <div id="projets" class="page"></div>
+    <div id="projets" class="page">PROJECTS</div>
 
     <!--    TRAINING    -->
-    <div id="formations" class="page"></div>
+    <div id="formations" class="page">TRAINING</div>
 
     <!--    XP          -->
-    <div id="experiences" class="page"></div>
+    <div id="experiences" class="page">XP</div>
 
     <!--    CONTACT     -->
-    <div id="contact" class="page"></div>
+    <div id="contact" class="page">CONTACT</div>
 
     <script src="script.js"></script>
 </body>
