--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
+
+    <!-- <link href="./assets/fonts/BlueSignature.otf" rel="stylesheet"> -->
     <link rel="stylesheet" href="style.css">
     <title>Portfolio</title>
 </head>
@@ -38,16 +40,42 @@
     </div>
 
     <!--    PROJECTS    -->
-    <div id="projets" class="page">PROJECTS</div>
+    <div id="projets" class="page">
+        <h1>Projets</h1>
+        <div id="list-projects">
+        </div>
+    </div>
 
     <!--    TRAINING    -->
-    <div id="formations" class="page">TRAINING</div>
+    <div id="formations" class="page">
+        <h1>Formations</h1>
+        <div id="training"></div>
+    </div>
 
     <!--    XP          -->
-    <div id="experiences" class="page">XP</div>
+    <div id="experiences" class="page">
+        <h1>Expériences</h1>
+        <div id="xp"></div>
+    </div>
 
     <!--    CONTACT     -->
-    <div id="contact" class="page">CONTACT</div>
+    <div id="contact" class="page">
+        <h1>Contact</h1>
+        <div id="contact-me">
+            <h2 class="label">mail
+                <a class="link" href="mailto:loic.hernandez@sfr.fr">loic.hernandez@sfr</a>
+            </h2>
+            <h2 class='label'>téléphone
+                <a class="link" href="tel:+621953218">06.21.95.32.18</a>
+            </h2>
+            <h2 class='label'>linkedin.com
+                <a href="https://www.linkedin.com/in/lo%C3%AFc-hernandez-59750b252/"
+                    class="link">/loic-hernandez
+                </a>
+            </h2>
+        </div>
+
+    </div>
 
     <script src="script.js"></script>
 </body>
