--- a/index.html
+++ b/index.html
@@ -66,11 +66,11 @@
                 <a class="link" href="mailto:loic.hernandez@sfr.fr">loic.hernandez@sfr</a>
             </h2>
             <h2 class='label'>téléphone
-                <a class="link" href="tel:+621953218">06.21.95.32.18</a>
+                <a class="link" href="tel:+621953218">0621953218</a>
             </h2>
             <h2 class='label'>linkedin.com
                 <a href="https://www.linkedin.com/in/lo%C3%AFc-hernandez-59750b252/"
-                    class="link">/loic-hernandez
+                    class="link" target="_blank">/loic-hernandez
                 </a>
             </h2>
         </div>
