--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
         rel="stylesheet">
@@ -30,8 +31,8 @@
 
     <!--    HOME        -->
     <div id="accueil" class="page">
-        <div id="identity">
-            <div>
+        <div id="identity" data-aos="zoom-in" data-aos-duration="1500">
+            <div data-aos="zoom-in" data-aos-delay="1500">
                 <h1>Loïc</h1>
                 <h1>Hernandez</h1>
                 <p style="font-style: italic;">Développeur web & web mobile</h2>
@@ -41,26 +42,26 @@
 
     <!--    PROJECTS    -->
     <div id="projets" class="page">
-        <h1>Projets</h1>
+            <h1 data-aos="fade-up" data-aos-easing="ease-in-sine">Projets</h1>
         <div id="list-projects">
         </div>
     </div>
 
     <!--    TRAINING    -->
     <div id="formations" class="page">
-        <h1>Formations</h1>
+        <h1 data-aos="fade-up">Formations</h1>
         <div id="training"></div>
     </div>
 
     <!--    XP          -->
     <div id="experiences" class="page">
-        <h1>Expériences</h1>
+        <h1 data-aos="fade-up">Expériences</h1>
         <div id="xp"></div>
     </div>
 
     <!--    CONTACT     -->
     <div id="contact" class="page">
-        <h1>Contact</h1>
+        <h1 data-aos="fade-up">Contact</h1>
         <div id="contact-me">
             <h2 class="label">mail
                 <a class="link" href="mailto:loic.hernandez@sfr.fr">loic.hernandez@sfr</a>
@@ -69,8 +70,8 @@
                 <a class="link" href="tel:+621953218">0621953218</a>
             </h2>
             <h2 class='label'>linkedin.com
-                <a href="https://www.linkedin.com/in/lo%C3%AFc-hernandez-59750b252/"
-                    class="link" target="_blank">/loic-hernandez
+                <a href="https://www.linkedin.com/in/lo%C3%AFc-hernandez-59750b252/" class="link"
+                    target="_blank">/loic-hernandez
                 </a>
             </h2>
         </div>
@@ -78,6 +79,10 @@
     </div>
 
     <script src="script.js"></script>
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
 </body>
 
 </html>
