add AOS library

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 <body>
     <!--    NAVBAR      -->
-    <div class="navbar">
+    <div class="navbar" data-aos="fade-down" data-aos-duration="1500">
         <h2>Portfolio</h2>
         <div id="menu">
             <div class="icon" id="burger">|||</div>
@@ -27,7 +27,6 @@
             <ul></ul>
         </div>
     </div>
-    <div id="bg-navbar"></div>
 
     <!--    HOME        -->
     <div id="accueil" class="page">
