--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="icon" href="favicon.ico" />
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
@@ -41,26 +42,26 @@
 
     <!--    PROJECTS    -->
     <div id="projets" class="page">
-            <h1 data-aos="fade-up" data-aos-easing="ease-in-sine">Projets</h1>
+            <h1 data-aos="fade-up" data-aos-easing="ease-in-sine" data-aos-duration="1000">Projets</h1>
         <div id="list-projects">
         </div>
     </div>
 
     <!--    TRAINING    -->
     <div id="formations" class="page">
-        <h1 data-aos="fade-up">Formations</h1>
+        <h1 data-aos="fade-up" data-aos-duration="1000">Formations</h1>
         <div id="training"></div>
     </div>
 
     <!--    XP          -->
     <div id="experiences" class="page">
-        <h1 data-aos="fade-up">Expériences</h1>
+        <h1 data-aos="fade-up" data-aos-duration="1000">Expériences</h1>
         <div id="xp"></div>
     </div>
 
     <!--    CONTACT     -->
     <div id="contact" class="page">
-        <h1 data-aos="fade-up">Contact</h1>
+        <h1 data-aos="fade-up" data-aos-duration="1000">Contact</h1>
         <div id="contact-me">
             <h2 class="label">mail
                 <a class="link" href="mailto:loic.hernandez@sfr.fr">loic.hernandez@sfr</a>
