--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <!-- <link href="./assets/fonts/BlueSignature.otf" rel="stylesheet"> -->
     <link rel="stylesheet" href="style.css">
-    <title>Portfolio</title>
+    <title>Portfolio | Loïc Hernandez</title>
 </head>
 
 <body>
