set responsive design

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
     <!--    NAVBAR      -->
     <div class="navbar" data-aos="fade-down" data-aos-duration="1500">
-        <h2>Portfolio</h2>
+        <h2><a href="/">Portfolio</a></h2>
         <div id="menu">
             <div class="icon" id="burger">|||</div>
             <div class="icon" id="cross">X</div>
@@ -32,7 +32,7 @@
     <!--    HOME        -->
     <div id="accueil" class="page">
         <div id="identity" data-aos="zoom-in" data-aos-duration="1500">
-            <div data-aos="zoom-in" data-aos-delay="1500">
+            <div data-aos="zoom-in" data-aos-delay="1500" data-aos-duration="1000">
                 <h1>Loïc</h1>
                 <h1>Hernandez</h1>
                 <p style="font-style: italic;">Développeur web & web mobile</h2>
@@ -42,27 +42,26 @@
 
     <!--    PROJECTS    -->
     <div id="projets" class="page">
-            <h1 data-aos="fade-up" data-aos-easing="ease-in-sine" data-aos-duration="1000">Projets</h1>
-        <div id="list-projects">
-        </div>
+        <h1 data-aos="fade-up" data-aos-easing="ease-in-sine" data-aos-duration="1000">Projets</h1>
+        <div id="list-projects" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="1000"></div>
     </div>
 
     <!--    TRAINING    -->
     <div id="formations" class="page">
         <h1 data-aos="fade-up" data-aos-duration="1000">Formations</h1>
-        <div id="training"></div>
+        <div id="training" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="1000"></div>
     </div>
 
     <!--    XP          -->
     <div id="experiences" class="page">
         <h1 data-aos="fade-up" data-aos-duration="1000">Expériences</h1>
-        <div id="xp"></div>
+        <div id="xp" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="1000"></div>
     </div>
 
     <!--    CONTACT     -->
     <div id="contact" class="page">
         <h1 data-aos="fade-up" data-aos-duration="1000">Contact</h1>
-        <div id="contact-me">
+        <div id="contact-me" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="1000">
             <h2 class="label">mail
                 <a class="link" href="mailto:loic.hernandez@sfr.fr">loic.hernandez@sfr</a>
             </h2>
