enhance info display

--- a/index.html
+++ b/index.html
@@ -62,17 +62,21 @@
     <div id="contact" class="page">
         <h1 data-aos="fade-up" data-aos-duration="1000">Contact</h1>
         <div id="contact-me" data-aos="fade-down" data-aos-duration="1000" data-aos-delay="1000">
-            <h2 class="label">mail
-                <a class="link" href="mailto:loic.hernandez@sfr.fr">loic.hernandez@sfr</a>
-            </h2>
-            <h2 class='label'>téléphone
-                <a class="link" href="tel:+621953218">0621953218</a>
-            </h2>
-            <h2 class='label'>linkedin.com
-                <a href="https://www.linkedin.com/in/lo%C3%AFc-hernandez-59750b252/" class="link"
-                    target="_blank">/loic-hernandez
-                </a>
-            </h2>
+            <div class="label">
+                <h2>mail</h2>
+                <h2><a class="link" href="mailto:loic.hernandez@sfr.fr">loic.hernandez@sfr</a></h2>
+            </div>
+            <div class="label">
+                <h2>téléphone</h2>
+                <h2><a class="link" href="tel:+621953218">0621953218</a></h2>
+            </div>
+            <div class="label">
+                <h2>linkedin.com</h2>
+                <h2>
+                    <a href="https://www.linkedin.com/in/lo%C3%AFc-hernandez-59750b252/" class="link" target="_blank">/LoïcHernandez
+                    </a>
+                </h2>
+            </div>
         </div>
 
     </div>
