fix mobile display landscape

--- a/index.html
+++ b/index.html
@@ -32,10 +32,15 @@
     <!--    HOME        -->
     <div id="accueil" class="page">
         <div id="identity" data-aos="zoom-in" data-aos-duration="1500">
-            <div data-aos="zoom-in" data-aos-delay="1500" data-aos-duration="1000">
+            <div id="identity-name" data-aos="zoom-in" data-aos-delay="1500" data-aos-duration="1000">
                 <h1>Loïc</h1>
                 <h1>Hernandez</h1>
                 <p style="font-style: italic;">Développeur web & web mobile</h2>
+            </div>
+            <div id="identity-description">
+                <p>Après 20 ans d'expérience dans la logistique, j'ai décidé de réorienter ma carrière.</p>
+                <br>
+                <p>J'ai obtenu en septembre 2022 le titre professionnel Développeur web et web mobile.</p>
             </div>
         </div>
     </div>
@@ -73,7 +78,8 @@
             <div class="label">
                 <h2>linkedin.com</h2>
                 <h2>
-                    <a href="https://www.linkedin.com/in/lo%C3%AFc-hernandez-59750b252/" class="link" target="_blank">/LoïcHernandez
+                    <a href="https://www.linkedin.com/in/lo%C3%AFc-hernandez-59750b252/" class="link"
+                        target="_blank">/LoïcHernandez
                     </a>
                 </h2>
             </div>
