--- a/index.html
+++ b/index.html
@@ -31,11 +31,12 @@
 
     <!--    HOME        -->
     <div id="accueil" class="page">
+        <video src="./assets/video/mac.mp4" type="video/mp4" autoplay loop muted preload="auto"></video>
         <div id="identity" data-aos="zoom-in" data-aos-duration="1500">
             <div id="identity-name" data-aos="zoom-in" data-aos-delay="1500" data-aos-duration="1000">
-                <h1>Loïc</h1>
-                <h1>Hernandez</h1>
-                <p style="font-style: italic;">Développeur web & web mobile</h2>
+                <h1>Loïc Hernandez</h1>
+                <hr style="border:1px solid white;"/>
+                    <p>Développeur web</p>
             </div>
             <div id="identity-description">
                 <p>Après 20 ans d'expérience dans la logistique, j'ai décidé de réorienter ma carrière.</p>
