change home page style

--- a/index.html
+++ b/index.html
@@ -31,7 +31,9 @@
 
     <!--    HOME        -->
     <div id="accueil" class="page">
-        <video src="./assets/video/mac.mp4" type="video/mp4" autoplay loop muted preload="auto"></video>
+        <video autoplay loop muted>
+            <source src="./assets/video/mac.mp4" type="video/mp4" >
+        </video>
         <div id="identity" data-aos="zoom-in" data-aos-duration="1500">
             <div id="identity-name" data-aos="zoom-in" data-aos-delay="1500" data-aos-duration="1000">
                 <h1>Loïc Hernandez</h1>
